// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrensiesDropdown /> renders badge within error with when currenciesStatus.hasFailed=true and errorMessage provided 1`] = `
<div
  className="curr-dropdown"
>
  <p
    className="curr-dropdown__error text--white "
  >
    test error
  </p>
</div>
`;

exports[`<CurrensiesDropdown /> renders currencies dropdown with currencies provided 1`] = `
<div
  className="curr-dropdown"
>
  <DropdownInline
    defaultText=""
    error=""
    label="Currency:"
    labelClasses="curr-dropdown__label text--gray"
    name="currencyDropdown"
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "1",
          "name": "test",
        },
      ]
    }
    selectClasses="curr-dropdown__selector text--white"
    value="1"
    wrapperClasses=""
  />
</div>
`;

exports[`<CurrensiesDropdown /> renders spinner with default props provided 1`] = `
<div
  className="curr-dropdown"
>
  <Spinner
    spinnerClasses="spinner--small text--white"
    wrapperClasses=""
  />
</div>
`;
